# ollama-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: chat.rs  chat_thinking.rs  chat_token_usage.rs  delete.rs  embed.rs  generate.rs  ps.rs  pull.rs  show_model.rs  structured_output.rs  tags.rs  tool_call.rs  version.rs
src/: error.rs  lib.rs
src/types/: chat.rs  common.rs  delete.rs  embed.rs  generate.rs  mod.rs  ps.rs  pull.rs  show.rs  tags.rs  version.rs
