[package]
name = "ollama-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.28", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
tokio-util = "0.7.17"
tracing = "0.1.44"
futures-util = "0.3.31"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = "0.3.22"
