[package]
name = "ollama-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = "0.7"
tracing = "0.1"
futures-util = "0.3"
async-stream = "0.3"

[dev-dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.12.0"
dotenvy = "0.15.7"
tokio = { version = "1.49.0", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
